--- a/index.html
+++ b/index.html
@@ -112,6 +112,51 @@
                 <div class="col-md-9">
                     <h2 class="mb-3">最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、美国、加拿大、韩国、香港、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/a6739d732704eaa23f08687f69677fcf.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、美国、加拿大、香港、韩国、欧洲、新加坡等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、韩国、美国、香港、欧洲、加拿大、新加坡等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-03-30">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-3-30-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -367,51 +412,6 @@
                                     这一次的节点更新覆盖了韩国、美国、日本、欧洲、新加坡、加拿大、香港等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-13-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-13-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、日本、美国、新加坡、加拿大、韩国、欧洲等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-12-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-12-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、新加坡、加拿大、韩国、日本、香港、欧洲等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-11">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-11-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月11日22M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-11-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月11日22M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、欧洲、美国、香港、日本、加拿大、韩国等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -421,16 +421,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-57745.htm" title="青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）">青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-21-node-share-links.htm" title="VPN设备 | 2月21日21.8M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 2月21日21.8M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月26日19.7M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-84166.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
-                        <li class="py-2"><a href="/news/article-69207.htm" title="华畜兽药是哪个公司的（华畜兽药可排第几名）">华畜兽药是哪个公司的（华畜兽药可排第几名）</a></li>
-                        <li class="py-2"><a href="/news/article-82032.htm" title="宠物粮食加工厂好做吗知乎文章怎么写 宠物粮食加工厂好做吗知乎文章怎么写的">宠物粮食加工厂好做吗知乎文章怎么写 宠物粮食加工厂好做吗知乎文章怎么写的</a></li>
-                        <li class="py-2"><a href="/news/article-66660.htm" title="用Pandas 处理大数据的3种超级方法">用Pandas 处理大数据的3种超级方法</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-5-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月5日21M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月5日21M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" title="VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-63559.htm" title="生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）">生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）</a></li>
+                        <li class="py-2"><a href="/news/article-75854.htm" title="芭比堂宠物医院前台怎么样啊（芭比堂宠物医院前台怎么样啊知乎）">芭比堂宠物医院前台怎么样啊（芭比堂宠物医院前台怎么样啊知乎）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" title="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-74488.htm" title="爬虫系列：爬虫验证码识别_在线工具">爬虫系列：爬虫验证码识别_在线工具</a></li>
+                        <li class="py-2"><a href="/news/article-67906.htm" title="动物疫苗有没有毒性成分组成（动物疫苗的重要性）">动物疫苗有没有毒性成分组成（动物疫苗的重要性）</a></li>
+                        <li class="py-2"><a href="/news/article-67292.htm" title="有限体积法求解一维非稳态对流扩散方程">有限体积法求解一维非稳态对流扩散方程</a></li>
+                        <li class="py-2"><a href="/news/article-73153.htm" title="宠物粮食专卖店电话多少啊（宠物粮基地）">宠物粮食专卖店电话多少啊（宠物粮基地）</a></li>
+                        <li class="py-2"><a href="/news/article-75175.htm" title="读取spring的配置来定义常量">读取spring的配置来定义常量</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-high-speed-nodes.htm" title="VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-3-node-share.htm" title="VPN设备 | 3月3日18M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月3日18M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-71162.htm" title="简单聊一聊Vue3组件更新过程_vue.js">简单聊一聊Vue3组件更新过程_vue.js</a></li>
                     </ul>
     </div>
 </div>
@@ -442,10 +442,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                     </ul>
     </div>
